--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://akash-1811.github.io/Akash_Portfolio",
+  "homepage": "https://developerakash.com",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
