--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^3.6.0",
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.12",
     "gh-pages": "^6.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
